# singlestage-ui

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deploy_demo  oxyde-cloud.toml
docs/: Cargo.toml
docs/src/: app.rs  lib.rs  main.rs
docs/src/components/: code_block.rs  component_template.rs  mod.rs  sidebar.rs  theme_switcher.rs
docs/src/components/demos/: cookie_settings.rs  payment_method.rs  report_issue.rs  team_members.rs
docs/src/routes/: icon_macro.rs  installation.rs  introduction.rs  landing.rs  mod.rs  theme_switcher.rs
docs/src/routes/components/: mod.rs
docs/src/routes/components/_combobox/: anatomy.rs  component.toml
docs/src/routes/components/_dropdown/: component.toml
docs/src/routes/components/_range/: anatomy.rs  component.toml
docs/src/routes/components/_toast/: anatomy.rs
docs/src/routes/components/accordion/: anatomy.rs  component.toml
docs/src/routes/components/alert/: anatomy.rs  component.toml
docs/src/routes/components/aspect_ratio/: anatomy.rs  component.toml
docs/src/routes/components/avatar/: anatomy.rs  component.toml
docs/src/routes/components/badge/: anatomy.rs  component.toml
docs/src/routes/components/breadcrumb/: anatomy.rs  component.toml
docs/src/routes/components/button/: anatomy.rs  component.toml
docs/src/routes/components/button_group/: anatomy.rs  component.toml
docs/src/routes/components/card/: anatomy.rs  component.toml
docs/src/routes/components/carousel/: anatomy.rs  component.toml
docs/src/routes/components/checkbox/: anatomy.rs  component.toml
docs/src/routes/components/dialog/: anatomy.rs  (+1 more)
docs/src/routes/debug/: button.rs  checkbox.rs  context_menu.rs  dropdown.rs  form_reset.rs  input.rs  mod.rs  radio.rs  select.rs  slider.rs  textarea.rs  toggle.rs
docs/src/routes/getting_started/: icon_macro.rs  installation.rs  mod.rs  theme_provider.rs
docs/src/routes/landing/: mod.rs
docs/style/: main.css
macros/: Cargo.toml
macros/src/: lib.rs  svg.rs
singlestage/: Cargo.toml  build.rs
singlestage/src/: as_child.rs  lib.rs  patch_class.rs  reactive.rs
singlestage/src/components/: mod.rs
singlestage/src/components/accordion/: accordion.css  accordion.rs  content.rs  item.rs  mod.rs  trigger.rs
singlestage/src/components/alert/: alert.css  alert.rs  description.rs  mod.rs  title.rs
singlestage/src/components/aspect_ratio/: aspect_ratio.css  mod.rs
singlestage/src/components/avatar/: avatar.css  avatar.rs  fallback.rs  group.rs  image.rs  mod.rs
singlestage/src/components/badge/: badge.css  mod.rs
singlestage/src/components/breadcrumb/: breadcrumb.css  breadcrumb.rs  item.rs  mod.rs  separator.rs
singlestage/src/components/button/: button.css  mod.rs
singlestage/src/components/button_group/: button_group.css  group.rs  mod.rs  separator.rs  text.rs
singlestage/src/components/card/: card.css  card.rs  content.rs  description.rs  footer.rs  header.rs  mod.rs  title.rs
singlestage/src/components/carousel/: carousel.css  carousel.rs  content.rs  item.rs  mod.rs  next.rs  previous.rs
singlestage/src/components/checkbox/: checkbox.css  checkbox.rs  group.rs  mod.rs
singlestage/src/components/combobox/: mod.rs
singlestage/src/components/context_menu/: content.rs  context_menu.css  group.rs  item.rs  label.rs  menu.rs  mod.rs  separator.rs  shortcut.rs  trigger.rs
singlestage/src/components/dialog/: close.rs  content.rs  description.rs  dialog.css  dialog.rs  footer.rs  header.rs  mod.rs  title.rs  trigger.rs
singlestage/src/components/dropdown/: content.rs  dropdown.css  group.rs  item.rs  label.rs  menu.rs  mod.rs  separator.rs  shortcut.rs  trigger.rs
singlestage/src/components/empty/: content.rs  description.rs  empty.css  empty.rs  header.rs  media.rs  mod.rs  title.rs
singlestage/src/components/field/: content.rs  description.rs  error.rs  field.css  field.rs  group.rs  label.rs  legend.rs  mod.rs  separator.rs  set.rs  title.rs
singlestage/src/components/input/: input.css  mod.rs
singlestage/src/components/input_group/: addon.rs  group.rs  input_group.css  mod.rs  text.rs
singlestage/src/components/item/: actions.rs  content.rs  description.rs  footer.rs  group.rs  header.rs  item.css  item.rs  media.rs  mod.rs  separator.rs  title.rs
singlestage/src/components/kbd/: group.rs  kbd.css  kbd.rs  mod.rs
singlestage/src/components/label/: label.css  mod.rs
singlestage/src/components/link/: link.css  mod.rs
singlestage/src/components/pagination/: content.rs  ellipsis.rs  item.rs  link.rs  mod.rs  next.rs  pagination.css  pagination.rs  previous.rs
singlestage/src/components/popover/: content.rs  mod.rs  popover.css  popover.rs  trigger.rs
singlestage/src/components/progress/: mod.rs  progress.css
singlestage/src/components/radio/: group.rs  mod.rs  radio.css  radio.rs
singlestage/src/components/range/: mod.rs  range.css
singlestage/src/components/scroll_area/: mod.rs  scroll_area.css
singlestage/src/components/select/: content.rs  item.rs  mod.rs  select.css  select.rs
singlestage/src/components/separator/: mod.rs  separator.css
singlestage/src/components/sidebar/: content.rs  footer.rs  header.rs  mod.rs  provider.rs  separator.rs  sidebar.css  sidebar.rs  trigger.rs
singlestage/src/components/skeleton/: mod.rs  skeleton.css
singlestage/src/components/slider/: mod.rs  slider.css
singlestage/src/components/spinner/: mod.rs  spinner.css
singlestage/src/components/switch/: mod.rs  switch.css
singlestage/src/components/table/: body.rs  caption.rs  cell.rs  footer.rs  head.rs  header.rs  mod.rs  row.rs  table.css  table.rs
singlestage/src/components/tabs/: content.rs  list.rs  mod.rs  tabs.css  tabs.rs  trigger.rs
singlestage/src/components/textarea/: mod.rs  textarea.css
singlestage/src/components/theme_provider/: main.css  mod.rs  mode.rs
singlestage/src/components/toast/: mod.rs  toast.css
singlestage/src/components/toggle/: mod.rs  toggle.css
singlestage/src/components/tooltip/: mod.rs  tooltip.css
singlestage_macro/: Cargo.toml  README.md
singlestage_macro/src/: icon.rs  lib.rs  svg.rs
(+262 files in other folders)
