[package]
name = "singlestage_macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[lib]
proc-macro = true

[dependencies]
serde = { workspace = true }
syntect = { workspace = true }
toml = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
