[package]
name = "singlestage"
readme = "../README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
docs_macro = { path = "../docs_macro/" }
singlestage_macro = { path = "../macro/" }

leptos = { workspace = true }
leptos_meta = { workspace = true }
serde = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4", "js"] }

[build-dependencies]
reqwest = { workspace = true, features = ["blocking"] }
sha256 = { workspace = true }

[features]
csr = ["leptos/csr"]
ssr = ["leptos/ssr"]
hydrate = ["leptos/hydrate"]
islands = ["serde/derive", "leptos/islands"]
nightly = ["leptos/nightly"]
default = [
  "accordion",
  "alert",
  "aspect_ratio",
  "avatar",
  "badge",
  "breadcrumb",
  "button",
  "card",
  "checkbox",
  "dialog",
  "dropdown",
  "input",
  "kbd",
  "label",
  "link",
  "pagination",
  "popover",
  "radio",
  "select",
  "separator",
  "sidebar",
  "skeleton",
  "slider",
  "switch",
  "table",
  "tabs",
  "textarea",
  "theme_provider",
  "toggle",
  "tooltip",
]

accordion = []
alert = []
aspect_ratio = []
avatar = []
badge = []
breadcrumb = ["dropdown"]
button = []
card = []
checkbox = ["label"]
dialog = []
dropdown = ["button"]
input = ["label"]
kbd = []
label = []
link = []
pagination = ["button"]
popover = []
radio = ["label"]
select = []
separator = []
sidebar = []
skeleton = []
slider = []
switch = ["checkbox", "label"]
table = []
tabs = []
textarea = []
theme_provider = []
toggle = []
tooltip = []
