[package]
name = "singlestage"
readme = "../README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
singlestage_macro = { version = "0", optional = true }

leptos = { workspace = true }
leptos_meta = { workspace = true }
serde = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4", "js"] }

[build-dependencies]
reqwest = { workspace = true, features = ["blocking"] }
sha256 = { workspace = true }

[features]
csr = ["leptos/csr"]
ssr = ["leptos/ssr"]
hydrate = ["leptos/hydrate"]
islands = ["serde/derive", "leptos/islands"]
nightly = ["leptos/nightly"]
default = [
  "accordion",
  "alert",
  "aspect_ratio",
  "avatar",
  "badge",
  "breadcrumb",
  "button",
  "button_group",
  "card",
  "carousel",
  "checkbox",
  "context_menu",
  "dialog",
  "dropdown",
  "icon",
  "field",
  "input",
  "item",
  "kbd",
  "label",
  "link",
  "pagination",
  "popover",
  "progress",
  "radio",
  "scroll_area",
  "select",
  "separator",
  "sidebar",
  "skeleton",
  "slider",
  "spinner",
  "switch",
  "table",
  "tabs",
  "textarea",
  "theme_provider",
  "toggle",
  "tooltip",
]

accordion = []
alert = []
aspect_ratio = []
avatar = []
badge = []
breadcrumb = ["dropdown"]
button = []
button_group = []
card = []
carousel = []
checkbox = ["field", "label"]
context_menu = []
dialog = []
dropdown = ["button"]
icon = ["macro"]
field = []
input = ["field", "label"]
item = []
kbd = []
macro = ["dep:singlestage_macro"]
label = []
link = []
pagination = ["button"]
popover = []
progress = []
radio = ["field", "label"]
scroll_area = []
select = ["field"]
separator = []
sidebar = []
skeleton = []
slider = ["field", "label"]
spinner = []
switch = ["field", "checkbox", "label"]
table = []
tabs = []
textarea = ["field", "label"]
theme_provider = []
toggle = []
tooltip = []
