[package]
name = "singlestage_macro"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Contains macros for the singlestage crate"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish = true

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
syn = { workspace = true }
